src/data/formats/permanent.css
/** Menu **/
#iaextractor-menu {
  position: relative;
  font-family: "Open Sans", Tahoma, Helvetica, "Sans-Serif";
  background: #FF6C09!important;
  z-index: 2147483647;
  color: #FFF!important;
  -moz-user-select: none;
}
#iaextractor-menu a {
  color: #FFF!important;
}
#iaextractor-menu span[type=title] {
  display: block;
  height: 30px;
  line-height: 36px;
  font-size: 16px!important;
  text-align: center;
}
#iaextractor-tabs {
  display: none;
  overflow: hidden;
  position: absolute;
  bottom: 0;
  font-size: 16px!important;
  text-align: center;
  line-height: 30px;
}
#iaextractor-tabs span {
  float: left;
  border-top: solid 2px transparent!important;
  cursor: pointer;
}
#iaextractor-tabs span[selected] {
  border-top-color: #FFF!important;
}

/** loading video info **/
#iaextractor-load {
  display: block;
  width: 64px;
  height: 64px;
  padding: 50%!important;
  margin-left: -32px!important;
  margin-top: -60px!important;
  background: url(resource://feca4b87-3be4-43da-a1b1-137c24220968-at-jetpack/iaextractor/data/formats/fetch.png) no-repeat center center !important;
}
/** Buttons **/
.iaextractor-button {
  position: absolute;
  display: inline-block;
  width: 32px;
  height: 30px;
  line-height: 36px;
  text-align: center;
}
.iaextractor-button:not([disabled=true]) {
  cursor: pointer;
}
.iaextractor-button i {
  display: inline-block;
  width: 16px;
  height: 16px;
  background-image: url(resource://feca4b87-3be4-43da-a1b1-137c24220968-at-jetpack/iaextractor/data/formats/images.png) !important;
  background-repeat: no-repeat;
}
#iaextractor-close {
  top: 4px;
  right: 2px;
  opacity: 0.7;
  transition: opacity 100ms!important;
}
#iaextractor-close:hover {
  opacity: 1;
}
#iaextractor-close:hover:active {
  opacity: 0.5;
}
#iaextractor-close i {
  background-position: -16px!important;
}
.iaextractor-dropdown {
  position: relative;
  float: right;
  background-color: #F79646!important;
  transition: background-color 100ms!important;
}
.iaextractor-dropdown i {
  background-position: -32px!important;
  pointer-events: none;
}
/** Menu Items **/
#iaextractor-items {
  overflow: hidden;
}
#iaextractor-items div {
  float: left;
}
.iaextractor-item {
  display: block;
  height: 30px;
  line-height: 30px;
  margin: 20px 33px 0 33px!important;
  text-decoration: none!important;
  outline: 0!important;
}
.iaextractor-item span:not(.iaextractor-dropdown) {
  display: inline-block!important;
  background: #F79646 -moz-image-rect(url(resource://feca4b87-3be4-43da-a1b1-137c24220968-at-jetpack/iaextractor/data/formats/downloadm.png), 0, 16, 16, 0) no-repeat 10px center!important;
  padding-left: 37px!important;
  transition: background-color 100ms!important;
}
.iaextractor-item span:not(.iaextractor-dropdown):hover {
  background-color: #FFA05A!important;
}
.iaextractor-item span:not(.iaextractor-dropdown):hover:active {
  background-color: #FF8830!important;
}
.iaextractor-dropdown:hover {
  background-color: #FFA05A!important;
}
.iaextractor-item[selected] .iaextractor-dropdown {
  background-color: #FF8830!important;
}

/** Downloader **/
#iaextractor-downloader {
  font-family: "Open Sans", Tahoma, Helvetica, "Sans-Serif";
  display: none;
  z-index: 2147483647;
  position: absolute; 
  color: #FFF!important;
  background-color: #FF8830!important;
  -moz-user-select: none;
}
#iaextractor-downloader li {
  display: block;
  height: 30px!important;
  line-height: 30px;
  padding: 0 40px!important;
  background-repeat: no-repeat!important;
  background-position: 10px center!important;
  transition: background-color 100ms!important;
}
#iaextractor-downloader li:hover {
  background-color: #FFA45A!important;
  cursor: pointer;
}
#iaextractor-downloader li:hover:active {
  background-color: #FF9E51!important;
}
#iaextractor-downloader li:nth-child(1) {
  background-image: -moz-image-rect(url(resource://feca4b87-3be4-43da-a1b1-137c24220968-at-jetpack/iaextractor/data/formats/downloadm.png), 0, 16, 16, 0)!important;
  display: none;
}
#iaextractor-downloader li:nth-child(2) {
  background-image: -moz-image-rect(url(resource://feca4b87-3be4-43da-a1b1-137c24220968-at-jetpack/iaextractor/data/formats/downloadm.png), 0, 32, 16, 16)!important;
}
#iaextractor-downloader li:nth-child(3) {
  background-image: -moz-image-rect(url(resource://feca4b87-3be4-43da-a1b1-137c24220968-at-jetpack/iaextractor/data/formats/downloadm.png), 0, 48, 16, 32)!important;
}
#iaextractor-downloader li:nth-child(4) {
  background-image: -moz-image-rect(url(resource://feca4b87-3be4-43da-a1b1-137c24220968-at-jetpack/iaextractor/data/formats/downloadm.png), 0, 64, 16, 48)!important;
}

/** Injected button **/
#formats-button-small {
  width: 34px;
  height: 34px;
  position: absolute; 
  right: 4px; 
  top: 13px;
  z-index: 2147483647; 
  cursor: pointer;
  -moz-appearance: none!important;
  border: 1px solid transparent!important;
  border-radius: 2px;
  background: #FFF -moz-image-rect(url(resource://feca4b87-3be4-43da-a1b1-137c24220968-at-jetpack/iaextractor/data/formats/injected-button.png), 0, 24, 24, 0) no-repeat center!important;
}
#formats-button-small:hover {
  border: 1px solid #FF6C09!important;
  background-color: #FFC077!important;
}
#formats-button-small:hover:active {
  border: 1px solid #FB9D5A!important;
  background: #FFD48B -moz-image-rect(url(resource://feca4b87-3be4-43da-a1b1-137c24220968-at-jetpack/iaextractor/data/formats/injected-button.png), 0, 48, 24, 24) no-repeat center!important;
}
#formats-button-small::-moz-focus-inner {
  border: 0;  /* remove dotted outline */
}

